--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .App {
+  background-color: black;
+}
+.wrapper {
+  padding: 20px 15px;
+  max-width: 100%;
+}
+.wrapper h1 {
   text-align: center;
+  font-size: 40px;
+  color: red;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper__todoList {
+  width: 100%;
+  height: auto;
+  padding: 10px 0;
+  border-top: 2px solid rgb(201, 192, 192);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper__todoList-items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+  padding: 5px 5px;
+  height: 80px;
+  background-color: rgb(158, 158, 93);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todoList__items-left {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+}
+.todoList__items-left h3 {
+  font-size: 38px;
+  font-weight: normal;
+}
+.todoList__items-right ul {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style-type: none;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.todoList__items-right ul li:hover{
+  text-decoration: underline;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todoForm__wrapper {
+  text-align: center;
+}
+.todoForm__wrapper form {
+  padding: 10px 0;
+}
+input[type="text"] {
+  width: 300px;
+  height: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.2rem;
+  padding: 2px 3px;
+}
+.input__details {
+  margin-top: 5px;
+}
+.input__details input[type="text"] {
+  height: 50px;
+}
+.input__btn {
+  margin: 5px;
+}
+.input__btn button {
+  padding: 10px 10px;
+  font-size: 20px;
+  letter-spacing: 3px;
+  cursor: pointer;
+  border: none;
+  background-color: rgb(0, 128, 128);
+  transition: 0.3s;
+}
+.input__btn button:hover {
+  background-color: rgb(0, 2, 128);
 }
