--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@
 }
 .todoList__items-below{
   padding: 10px 0;
-  border-top: 1px solid gray;
+  border-top: 1px dotted rgb(88, 84, 84);
 }
 .todoForm__wrapper {
   text-align: center;
